--- a/js/languages/ja.json
+++ b/js/languages/ja.json
@@ -932,7 +932,7 @@
     "helperSKU": "商品の一意な識別子",
     "helperSKUWithVariants": "バリエーションが存在する場合、SKUは %{variantInventoryLink} セクションで定義できます",
     "variantInventoryLink": "バリエーションの管理",
-    "helperPrice": "価格を円, Bitcoinなどお好きな通貨で決めてください",
+    "helperPrice": "価格を円, Phoreなどお好きな通貨で決めてください",
     "helperCondition": "商品の全条件",
     "helperNSFW": "成人向け商品の場合 はい をマークしましょう",
     "helperTags": "タグの名前を入力してエンターを押すことでタグを追加しましょう。",
@@ -1168,8 +1168,8 @@
       "to": "送り先: %{address}",
       "payFromWallet": "ウォレットから支払い",
       "payWithAlt": "アルトコインで支払い",
-      "note1": "Bitcoin/Phore についての説明が欲しい場合、次のリンクを確認してください。 %{link}.",
-      "note1Link": "Bitcoin/Phore が必要ですか？ phore.io を確認しましょう。",
+      "note1": "Phore についての説明が欲しい場合、次のリンクを確認してください。 %{link}.",
+      "note1Link": "Phore が必要ですか？ phore.io を確認しましょう。",
       "note2": "支払いはエスクローにより安全に保持されます。問題が生じれば、異議申し立てが出来ます。",
       "note3": "*仲裁者手数料は紛争の発生時のみ生じます。",
       "note4": "支払いを行えば、少しの時間でインターフェースに更新されます。",
