--- a/js/languages/da.json
+++ b/js/languages/da.json
@@ -23,7 +23,7 @@
     "ECONOMIC": "Economic"
   },
   "feeChangeWidget": {
-    "label": "Bitcoin fee:",
+    "label": "Phore fee:",
     "btnChange": "change"
   },
   "consoleWarning": {
@@ -48,7 +48,7 @@
     },
     "install": "Install Now"
   },
-  "addressBarPlaceholder": "Indtast et @brugernavn, OpenBazaar-ID eller søgeord",
+  "addressBarPlaceholder": "Indtast et @brugernavn, PhoreMarketplace-ID eller søgeord",
   "testnet": "Testtilstand",
   "testnetTooltip": "Testtilstand bruger testnet-coins, som kun er beregnet til testformål.",
   "tabMenuHeading": "Menu",
@@ -139,7 +139,7 @@
     "notConnectedMenuItem": "Ikke forbundet",
     "torOnTooltip": "Tor er aktiv",
     "discoverCalloutTitle": "Udforsk",
-    "discoverCalloutBody": "Udforsk og handl i hundreder af forretninger på OpenBazaar",
+    "discoverCalloutBody": "Udforsk og handl i hundreder af forretninger på PhoreMarketplace",
     "myPage": "Min side",
     "customizePage": "Tilpas side",
     "createListing": "Opret listning",
@@ -223,7 +223,7 @@
     "modAddError": "There was an error adding this moderator.\n %{errMsg}",
     "modRemoveError": "There was an error removing this moderator.\n %{errMsg}",
     "storeWelcomeCalloutTitle": "Velkommen til din forretning!",
-    "storeWelcomeCalloutBody": "Din OpenBazaar-forretning er nu live på netværket. Kom i gang ved at oprette nogle listninger eller tilpasse din side.",
+    "storeWelcomeCalloutBody": "Din PhoreMarketplace-forretning er nu live på netværket. Kom i gang ved at oprette nogle listninger eller tilpasse din side.",
     "storeWelcomeCalloutBtnClose": "Luk",
     "store": {
       "retryStoreFetch": "Prøv igen",
@@ -301,10 +301,10 @@
     "languages": "Languages"
   },
   "about": {
-    "linkText": "Om OpenBazaar",
-    "brand": "OpenBazaar",
+    "linkText": "Om PhoreMarketplace",
+    "brand": "PhoreMarketplace",
     "blurbs": {
-      "tradeFree": "OpenBazaar er muliggjort af et internationalt hold af udviklere og frivillige, der bidrager med deres tid for at hjælpe med at frigøre handel."
+      "tradeFree": "PhoreMarketplace er muliggjort af et internationalt hold af udviklere og frivillige, der bidrager med deres tid for at hjælpe med at frigøre handel."
     },
     "version": "version %{version}",
     "bothVersions": "klient %{cVer}, server %{sVer}",
@@ -325,8 +325,8 @@
     },
     "licenseTab": {
       "linkText": "Licens",
-      "sectionHeader": "OpenBazaar MIT-licens",
-      "licensePreface": "OpenBazaar is open source software under the MIT license. This license is permissive and designed to allow people to fully reuse the code for other open source projects or for proprietary software. The full license text is below.",
+      "sectionHeader": "PhoreMarketplace MIT-licens",
+      "licensePreface": "PhoreMarketplace is open source software under the MIT license. This license is permissive and designed to allow people to fully reuse the code for other open source projects or for proprietary software. The full license text is below.",
       "header": "MIT-licensen (MIT)",
       "copyright": "Copright &copy; 2016 OpenBazaar-udviklerne",
       "paragraphs": {
@@ -337,7 +337,7 @@
     },
     "contributorsTab": {
       "linkText": "Bidragere",
-      "sectionHeader": "OpenBazaar-bidragere",
+      "sectionHeader": "PhoreMarketplace-bidragere",
       "listPreface": "Dette er en delvis liste over de, der har bidraget til projektet, enten gennem kode eller anden assistance."
     },
     "storyTab": {
@@ -367,10 +367,10 @@
       "helperLanguage": "Vis brugerfladeelementer på",
       "helperCountry": "Det land, du hovedsageligt residerer i",
       "helperCurrency": "Vis priser i",
-      "helperTranslations": "Hjælp med oversættelsen af OpenBazaar på %{helperTranslationsLink}",
+      "helperTranslations": "Hjælp med oversættelsen af PhoreMarketplace på %{helperTranslationsLink}",
       "helperTranslationsLink": "Transifex",
       "sectionName": "Generelt",
-      "bitcoinUnit": "Bitcon-enhed",
+      "bitcoinUnit": "Phore-enhed",
       "bitcoinUnitTypes": {
         "PHR": "PHR",
         "mPHR": "mPHR",
@@ -488,7 +488,7 @@
         "purge": "Purge Shared Files",
         "purgeHelper": "Delete cached files you are sharing with others",
         "purgeBtn": "Purge Files",
-        "purgeToolTip": "OpenBazaar shares cached content you have viewed with other users. If you have viewed text or images you don't want to share, this button will delete them. This will not affect any files that belong to you.",
+        "purgeToolTip": "PhoreMarketplace shares cached content you have viewed with other users. If you have viewed text or images you don't want to share, this button will delete them. This will not affect any files that belong to you.",
         "purgeError": "There was an error, your cached files may not have been deleted.",
         "purgeComplete": "Your cached files have been deleted.",
         "blockData": "Block Data",
@@ -514,7 +514,7 @@
       "transaction": {
         "sectionName": "Transaktioner",
         "saveMetadata": "Save Metadata",
-        "defaultFee": "Bitcoin Fee",
+        "defaultFee": "Phore Fee",
         "low": "Economic",
         "medium": "Normal",
         "high": "Priority"
@@ -555,7 +555,7 @@
       "languages": "Languages",
       "languagesHelper": "Enter all of the languages you support (ie: you can communicate clearly in).",
       "acceptGuidelines": "I have read the recommended %{acceptGuidelinesLink}",
-      "acceptGuidelinesLink": "OpenBazaar Dispute Resolution Guidelines",
+      "acceptGuidelinesLink": "PhoreMarketplace Dispute Resolution Guidelines",
       "understandRequirements": "I understand I must offer my services to resolve disputes to anyone that requests them, unless they violate the terms described above.",
       "status":{
         "saving": "Saving moderation settings…",
@@ -750,7 +750,7 @@
     "transactionsLabel": "Transaktioner",
     "receiveMoney": {
       "title": "Receive Money",
-      "needBitcoin": "Need Bitcoin?",
+      "needBitcoin": "Need Phore?",
       "btnCancel": "Annullér"
     },
     "sendMoney": {
@@ -948,7 +948,7 @@
     "helperSKU": "Et unikt ID for din listning",
     "helperSKUWithVariants": "Når der er flere varianter til stede, kan varenumre angives i sektionen “%{variantInventoryLink}”",
     "variantInventoryLink": "Lagerbeholdning for variant",
-    "helperPrice": "Angiv din pris i kroner, euro, dollars, bitcoin, hvad som helst",
+    "helperPrice": "Angiv din pris i kroner, euro, dollars, phore, hvad som helst",
     "helperCondition": "Din listnings overordnede stand",
     "helperNSFW": "Markér som ja, hvis listningen er NSFW",
     "helperTags": "Tilføj mange mærkater. Indtast et mærkatnavn, tryk Enter, gentag.",
@@ -1104,7 +1104,7 @@
     "introScreen": {
       "connectionLbl": "Forbindelse:",
       "btnChange": "Ændr",
-      "introLine": "En fri markedsplads. Ingen gebyrer. Ingen restriktioner. Tjen bitcoin.",
+      "introLine": "En fri markedsplads. Ingen gebyrer. Ingen restriktioner. Tjen phore.",
       "tagLine": "Køb og sælg frit",
       "btnGetStarted": "Kom i gang"
     },
@@ -1122,7 +1122,7 @@
     },
     "tosScreen": {
       "heading": "Servicevilkår",
-      "tos": "OpenBazaar is a network for trading goods and services directly between people - using Bitcoin - without any central organization controlling the platform. This means you are responsible for your own activity on the network.\n\nOpenBazaar users are not anonymous by default. Most communications between parties are encrypted, but IP addresses are public and can be associated with activity on the network. Malicious parties could use this information against you; protecting your privacy is your own responsibility.\n\nOpenBazaar users must adhere to the laws in their own legal jurisdiction as well as their conscience. The OpenBazaar developers do not condone - and are not responsible for - any use of the platform for illegal activity.\n\nThe OpenBazaar community of developers has worked hard to deliver a free platform for trade to the world. But as with any software, bugs will be found. The developers are not responsible for any monetary loss associated with problems in the software.\n\nBy using OpenBazaar you're responsible for your own actions on the OpenBazaar network."
+      "tos": "PhoreMarketplace is a network for trading goods and services directly between people - using Phore - without any central organization controlling the platform. This means you are responsible for your own activity on the network.\n\nPhoreMarketplace users are not anonymous by default. Most communications between parties are encrypted, but IP addresses are public and can be associated with activity on the network. Malicious parties could use this information against you; protecting your privacy is your own responsibility.\n\nPhoreMarketplace users must adhere to the laws in their own legal jurisdiction as well as their conscience. The PhoreMarketplace developers do not condone - and are not responsible for - any use of the platform for illegal activity.\n\nThe PhoreMarketplace community of developers has worked hard to deliver a free platform for trade to the world. But as with any software, bugs will be found. The developers are not responsible for any monetary loss associated with problems in the software.\n\nBy using PhoreMarketplace you're responsible for your own actions on the PhoreMarketplace network."
     }
   },
   "pageControls": {
@@ -1184,8 +1184,8 @@
       "to": "Til: %{address}",
       "payFromWallet": "Betal fra tegnebogen",
       "payWithAlt": "Betal med altcoins",
-      "note1": "Hvis du har brug for hjælp med at komme i gang med Bitcoin, læs da venligst %{link}.",
-      "note1Link": "Need Bitcoin? på OpenBazaar.org",
+      "note1": "Hvis du har brug for hjælp med at komme i gang med Phore, læs da venligst %{link}.",
+      "note1Link": "Need Phore? på Phore.io",
       "note2": "Din betaling vil blive holdt tilbage i en betinget krontrakt (escrow) på sikker vis. Hvis der opstår uenigheder, har du muligheden for at åbne en uenighed.",
       "note3": "* Moderatorens servicegebyr opkræves kun, hvis en uenighed åbnes.",
       "note4": "Når du har betalt, kan det tage et øjeblik, inden skærmbilledet opdateres.",
@@ -1193,7 +1193,7 @@
       "altcoinLink": "You can still fund your OB wallet with altcoins.",
       "walletNote": "<b>External wallets</b> that don't support Segregated Witness may not be able to pay for transactions.",
       "walletLink": "You can send funds to your OB wallet instead.",
-      "feeNote": "<b>Remember to cover any fees</b> when you send funds to your OpenBazaar wallet."
+      "feeNote": "<b>Remember to cover any fees</b> when you send funds to your PhoreMarketplace wallet."
     },
     "completeSection": {
       "paymentSent": "Betaling afsendt!",
@@ -1208,8 +1208,8 @@
       "send": "Send",
       "share": {
         "title": "Share with friends",
-        "body": "I just made a purchase on OpenBazaar, the free marketplace without fees or restrictions. Learn more at %{link}.",
-        "shareMsg": "I just made a purchase on @OpenBazaar, the free marketplace without fees or restrictions.",
+        "body": "I just made a purchase on PhoreMarketplace, the free marketplace without fees or restrictions. Learn more at %{link}.",
+        "shareMsg": "I just made a purchase on PhoreMarketplace @PhoreCrypto, the free marketplace without fees or restrictions.",
         "postToTwitter": "Post to Twitter",
         "postToFacebook": "Post to Facebook",
         "postToPinterest": "Post to Pinterest",
@@ -1375,7 +1375,7 @@
         "veryManyConfirmationsCount": "%{countText} bekræftelser",
         "rejectConfirm": {
           "title": "Er du sikker?",
-          "body": "Det oprindelige beløb i bitcoin vil blive returneret til køberen",
+          "body": "Det oprindelige beløb i phore vil blive returneret til køberen",
           "btnCancel": "Annullér",
           "btnConfirm": "Ja, afvis"
         },
@@ -1399,7 +1399,7 @@
         "fulfillBtn": "Udfør ordre",
         "refundConfirm": {
           "title": "Er du sikker?",
-          "body": "Det oprindelige beløb i bitcoin vil blive returneret til køberen",
+          "body": "Det oprindelige beløb i phore vil blive returneret til køberen",
           "btnCancel": "Annullér",
           "btnConfirm": "Ja, refundér"
         }
@@ -1673,7 +1673,7 @@
   },
   "spendModelErrors": {
     "provideAddress": "Please provide an address.",
-    "invalidAddress": "The provided address does not appear to be a valid bitcoin address.",
+    "invalidAddress": "The provided address does not appear to be a valid phore address.",
     "provideAmountNumber": "Please provide an amount as a number. If including a decimal, a period should be used as the seperator, for example \"0.00\".",
     "amountGreaterThanZero": "The amount must be greater than zero.",
     "insufficientFunds": "You have insufficient funds to send such an amount. Be sure to account for the transaction fee."
