--- a/js/languages/en_AU.json
+++ b/js/languages/en_AU.json
@@ -23,7 +23,7 @@
     "ECONOMIC": "Economic"
   },
   "feeChangeWidget": {
-    "label": "Bitcoin fee:",
+    "label": "Phore fee:",
     "btnChange": "change"
   },
   "consoleWarning": {
@@ -48,7 +48,7 @@
     },
     "install": "Install Now"
   },
-  "addressBarPlaceholder": "Type a @handle, OpenBazaar ID or search term",
+  "addressBarPlaceholder": "Type a @handle, PhoreMarketplace ID or search term",
   "testnet": "Test Mode",
   "testnetTooltip": "Test Mode uses testnet coins, which are intended for testing purposes only.",
   "tabMenuHeading": "MENU",
@@ -139,7 +139,7 @@
     "notConnectedMenuItem": "Not Connected",
     "torOnTooltip": "Tor active",
     "discoverCalloutTitle": "Discover",
-    "discoverCalloutBody": "Browse and shop at hundreds of stores on OpenBazaar",
+    "discoverCalloutBody": "Browse and shop at hundreds of stores on PhoreMarketplace",
     "myPage": "My Page",
     "customizePage": "Customize Page",
     "createListing": "Create Listing",
@@ -223,7 +223,7 @@
     "modAddError": "There was an error adding this moderator.\n %{errMsg}",
     "modRemoveError": "There was an error removing this moderator.\n %{errMsg}",
     "storeWelcomeCalloutTitle": "Welcome to your store!",
-    "storeWelcomeCalloutBody": "Your OpenBazaar store is now live on the network. Get started by creating some listings or customising your page.",
+    "storeWelcomeCalloutBody": "Your PhoreMarketplace store is now live on the network. Get started by creating some listings or customising your page.",
     "storeWelcomeCalloutBtnClose": "Close",
     "store": {
       "retryStoreFetch": "Retry",
@@ -301,10 +301,10 @@
     "languages": "Languages"
   },
   "about": {
-    "linkText": "About OpenBazaar",
-    "brand": "OpenBazaar",
+    "linkText": "About PhoreMarketplace",
+    "brand": "PhoreMarketplace",
     "blurbs": {
-      "tradeFree": "OpenBazaar is made possible by an international community of developers and volunteers contributing their time to help make trade free."
+      "tradeFree": "PhoreMarketplace is made possible by an international community of developers and volunteers contributing their time to help make trade free."
     },
     "version": "version %{version}",
     "bothVersions": "client %{cVer}, server %{sVer}",
@@ -325,8 +325,8 @@
     },
     "licenseTab": {
       "linkText": "License",
-      "sectionHeader": "OpenBazaar MIT License",
-      "licensePreface": "OpenBazaar is open source software under the MIT license. This license is permissive and designed to allow people to fully reuse the code for other open source projects or for proprietary software. The full license text is below.",
+      "sectionHeader": "PhoreMarketplace MIT License",
+      "licensePreface": "PhoreMarketplace is open source software under the MIT license. This license is permissive and designed to allow people to fully reuse the code for other open source projects or for proprietary software. The full license text is below.",
       "header": "The MIT License (MIT)",
       "copyright": "Copyright &copy; 2016 OpenBazaar Developers",
       "paragraphs": {
@@ -367,10 +367,10 @@
       "helperLanguage": "Display interface elements in",
       "helperCountry": "The country you primarily reside in",
       "helperCurrency": "Display Prices in",
-      "helperTranslations": "Help translate OpenBazaar on %{helperTranslationsLink}",
+      "helperTranslations": "Help translate PhoreMarketplace on %{helperTranslationsLink}",
       "helperTranslationsLink": "Transifex",
       "sectionName": "General",
-      "bitcoinUnit": "Bitcoin Unit",
+      "bitcoinUnit": "Phore Unit",
       "bitcoinUnitTypes": {
         "PHR": "PHR",
         "mPHR": "mPHR",
@@ -488,7 +488,7 @@
         "purge": "Purge Shared Files",
         "purgeHelper": "Delete cached files you are sharing with others",
         "purgeBtn": "Purge Files",
-        "purgeToolTip": "OpenBazaar shares cached content you have viewed with other users. If you have viewed text or images you don't want to share, this button will delete them. This will not affect any files that belong to you.",
+        "purgeToolTip": "PhoreMarketplace shares cached content you have viewed with other users. If you have viewed text or images you don't want to share, this button will delete them. This will not affect any files that belong to you.",
         "purgeError": "There was an error, your cached files may not have been deleted.",
         "purgeComplete": "Your cached files have been deleted.",
         "blockData": "Block Data",
@@ -514,7 +514,7 @@
       "transaction": {
         "sectionName": "Transactions",
         "saveMetadata": "Save Metadata",
-        "defaultFee": "Bitcoin Fee",
+        "defaultFee": "Phore Fee",
         "low": "Economic",
         "medium": "Normal",
         "high": "Priority"
@@ -555,7 +555,7 @@
       "languages": "Languages",
       "languagesHelper": "Enter all of the languages you support (ie: you can communicate clearly in).",
       "acceptGuidelines": "I have read the recommended %{acceptGuidelinesLink}",
-      "acceptGuidelinesLink": "OpenBazaar Dispute Resolution Guidelines",
+      "acceptGuidelinesLink": "PhoreMarketplace Dispute Resolution Guidelines",
       "understandRequirements": "I understand I must offer my services to resolve disputes to anyone that requests them, unless they violate the terms described above.",
       "status":{
         "saving": "Saving moderation settings…",
@@ -750,7 +750,7 @@
     "transactionsLabel": "Transactions",
     "receiveMoney": {
       "title": "Receive Money",
-      "needBitcoin": "Need Bitcoin?",
+      "needBitcoin": "Need Phore?",
       "btnCancel": "Cancel"
     },
     "sendMoney": {
@@ -948,7 +948,7 @@
     "helperSKU": "A unique identifier for your listing",
     "helperSKUWithVariants": "When variants are present, SKUs can be declared in the %{variantInventoryLink} section",
     "variantInventoryLink": "Variant Inventory",
-    "helperPrice": "Set your price in Dollars, Yuan, Bitcoin, anything",
+    "helperPrice": "Set your price in Dollars, Yuan, Phore, anything",
     "helperCondition": "The overall condition of your listing",
     "helperNSFW": "Mark yes if the listing is NSFW",
     "helperTags": "Add many tags. Enter a tag name, press enter, repeat.",
@@ -1104,7 +1104,7 @@
     "introScreen": {
       "connectionLbl": "Connection:",
       "btnChange": "Change",
-      "introLine": "A free marketplace. No fees. No restrictions. Earn Bitcoin.",
+      "introLine": "A free marketplace. No fees. No restrictions. Earn Phore.",
       "tagLine": "Buy and Sell Freely",
       "btnGetStarted": "Get Started"
     },
@@ -1122,7 +1122,7 @@
     },
     "tosScreen": {
       "heading": "Terms of Service",
-      "tos": "OpenBazaar is a network for trading goods and services directly between people - using Bitcoin - without any central organisation controlling the platform. This means you are responsible for your own activity on the network.\n\nOpenBazaar users are not anonymous by default. Most communications between parties are encrypted, but IP addresses are public and can be associated with activity on the network. Malicious parties could use this information against you; protecting your privacy is your own responsibility.\n\nOpenBazaar users must adhere to the laws in their own legal jurisdiction as well as their conscience. The OpenBazaar developers do not condone - and are not responsible for - any use of the platform for illegal activity.\n\nThe OpenBazaar community of developers has worked hard to deliver a free platform for trade to the world. But as with any software, bugs will be found. The developers are not responsible for any monetary loss associated with problems in the software.\n\nBy using OpenBazaar you're responsible for your own actions on the OpenBazaar network."
+      "tos": "PhoreMarketplace is a network for trading goods and services directly between people - using Phore - without any central organisation controlling the platform. This means you are responsible for your own activity on the network.\n\nPhoreMarketplace users are not anonymous by default. Most communications between parties are encrypted, but IP addresses are public and can be associated with activity on the network. Malicious parties could use this information against you; protecting your privacy is your own responsibility.\n\nPhoreMarketplace users must adhere to the laws in their own legal jurisdiction as well as their conscience. The PhoreMarketplace developers do not condone - and are not responsible for - any use of the platform for illegal activity.\n\nThe PhoreMarketplace community of developers has worked hard to deliver a free platform for trade to the world. But as with any software, bugs will be found. The developers are not responsible for any monetary loss associated with problems in the software.\n\nBy using PhoreMarketplace you're responsible for your own actions on the PhoreMarketplace network."
     }
   },
   "pageControls": {
@@ -1184,8 +1184,8 @@
       "to": "To: %{address}",
       "payFromWallet": "Pay from wallet",
       "payWithAlt": "Pay with altcoins",
-      "note1": "If you need help getting started with Bitcoin, please read %{link}.",
-      "note1Link": "Need Bitcoin? on OpenBazaar.org",
+      "note1": "If you need help getting started with Phore, please read %{link}.",
+      "note1Link": "Need Phore? on Phore.io",
       "note2": "Your payment will be held securely in escrow. If any issues arise, you’ll have the ability to open a dispute.",
       "note3": "*The moderator service fee only applies if a dispute is opened.",
       "note4": "Once you have paid, it may take a bit for the interface to update.",
@@ -1193,7 +1193,7 @@
       "altcoinLink": "You can still fund your PM wallet with altcoins.",
       "walletNote": "<b>External wallets</b> that don't support Segregated Witness may not be able to pay for transactions.",
       "walletLink": "You can send funds to your PM wallet instead.",
-      "feeNote": "<b>Remember to cover any fees</b> when you send funds to your OpenBazaar wallet."
+      "feeNote": "<b>Remember to cover any fees</b> when you send funds to your PhoreMarketplace wallet."
     },
     "completeSection": {
       "paymentSent": "Payment Sent!",
@@ -1208,8 +1208,8 @@
       "send": "Send",
       "share": {
         "title": "Share with friends",
-        "body": "I just made a purchase on OpenBazaar, the free marketplace without fees or restrictions. Learn more at %{link}.",
-        "shareMsg": "I just made a purchase on @OpenBazaar, the free marketplace without fees or restrictions.",
+        "body": "I just made a purchase on PhoreMarketplace, the free marketplace without fees or restrictions. Learn more at %{link}.",
+        "shareMsg": "I just made a purchase on PhoreMarketplace @PhoreCrypto, the free marketplace without fees or restrictions.",
         "postToTwitter": "Post to Twitter",
         "postToFacebook": "Post to Facebook",
         "postToPinterest": "Post to Pinterest",
@@ -1375,7 +1375,7 @@
         "veryManyConfirmationsCount": "%{countText} confirmations",
         "rejectConfirm": {
           "title": "Are you sure?",
-          "body": "The original amount in bitcoin will be returned to the buyer",
+          "body": "The original amount in phore will be returned to the buyer",
           "btnCancel": "Cancel",
           "btnConfirm": "Yes, Reject"
         },
@@ -1399,7 +1399,7 @@
         "fulfillBtn": "Fulfil Order",
         "refundConfirm": {
           "title": "Are you sure?",
-          "body": "The original amount in bitcoin will be returned to the buyer",
+          "body": "The original amount in phore will be returned to the buyer",
           "btnCancel": "Cancel",
           "btnConfirm": "Yes, Refund"
         }
@@ -1673,7 +1673,7 @@
   },
   "spendModelErrors": {
     "provideAddress": "Please provide an address.",
-    "invalidAddress": "The provided address does not appear to be a valid bitcoin address.",
+    "invalidAddress": "The provided address does not appear to be a valid phore address.",
     "provideAmountNumber": "Please provide an amount as a number. If including a decimal, a period should be used as the seperator, for example \"0.00\".",
     "amountGreaterThanZero": "The amount must be greater than zero.",
     "insufficientFunds": "You have insufficient funds to send such an amount. Be sure to account for the transaction fee."
