--- a/js/languages/ru.json
+++ b/js/languages/ru.json
@@ -23,7 +23,7 @@
     "ECONOMIC": "Экономичная"
   },
   "feeChangeWidget": {
-    "label": "Bitcoin комиссия:",
+    "label": "Phore комиссия:",
     "btnChange": "изменить"
   },
   "consoleWarning": {
@@ -48,7 +48,7 @@
     },
     "install": "Установить Сейчас"
   },
-  "addressBarPlaceholder": "Напишите @handle, OpenBazaar ID или ищите по ключевому слову",
+  "addressBarPlaceholder": "Напишите @handle, PhoreMarketplace ID или ищите по ключевому слову",
   "testnet": "Режим Тестирования",
   "testnetTooltip": "В Режиме Тестирования используются testnet монеты, которые предназначены только для режима тестирования.",
   "tabMenuHeading": "МЕНЮ",
@@ -139,7 +139,7 @@
     "notConnectedMenuItem": "Нет Соединения",
     "torOnTooltip": "Tor активирован",
     "discoverCalloutTitle": "Исследуй ",
-    "discoverCalloutBody": "Смотри и делай покупки в сотнях магазинов на OpenBazaar",
+    "discoverCalloutBody": "Смотри и делай покупки в сотнях магазинов на PhoreMarketplace",
     "myPage": "Моя страница",
     "customizePage": "Настроить страницу",
     "createListing": "Создать объявление",
@@ -156,7 +156,7 @@
       "notifications": "Уведомления",
       "nav": "Навигация",
       "close": "Закрыть",
-      "currentPrice": "Текущая цена Bitcoin"
+      "currentPrice": "Текущая цена Phore"
     },
     "serversMenu": {
       "newServer": "Новый сервер",
@@ -223,7 +223,7 @@
     "modAddError": "Произошла ошибка при добавлении этого модератора.  %{errMsg}",
     "modRemoveError": " Произошла ошибка при удалении модератора. %{errMsg}",
     "storeWelcomeCalloutTitle": "Добро пожаловать в ваш магазин!",
-    "storeWelcomeCalloutBody": "Ваш магазин OpenBazaar теперь подключен к сети. Начните с создания витрины или настройте страницу.",
+    "storeWelcomeCalloutBody": "Ваш магазин PhoreMarketplace теперь подключен к сети. Начните с создания витрины или настройте страницу.",
     "storeWelcomeCalloutBtnClose": "Закрыть",
     "store": {
       "retryStoreFetch": "Обновить",
@@ -301,10 +301,10 @@
     "languages": "Языки"
   },
   "about": {
-    "linkText": "Об OpenBazaar",
-    "brand": "OpenBazaar",
+    "linkText": "Об PhoreMarketplace",
+    "brand": "PhoreMarketplace",
     "blurbs": {
-      "tradeFree": "OpenBazaar стал возможен благодаря международному сообществу разработчиков и добровольцев, которые вносят свой вклад, чтобы сделать торговлю свободной."
+      "tradeFree": "PhoreMarketplace стал возможен благодаря международному сообществу разработчиков и добровольцев, которые вносят свой вклад, чтобы сделать торговлю свободной."
     },
     "version": "версия %{version}",
     "bothVersions": "клиент %{cVer}, сервер %{sVer}",
@@ -325,8 +325,8 @@
     },
     "licenseTab": {
       "linkText": "Лицензия",
-      "sectionHeader": " MIT лицензия OpenBazaar",
-      "licensePreface": "OpenBazaar - это программное обеспечение с открытым исходным кодом под лицензией MIT. Эта лицензия разрешает и предназначена для того, чтобы позволить людям полностью использовать код для других проектов с открытым исходным кодом или для проприетарного программного обеспечения. Полный текст лицензии приведен ниже.",
+      "sectionHeader": " MIT лицензия PhoreMarketplace",
+      "licensePreface": "PhoreMarketplace - это программное обеспечение с открытым исходным кодом под лицензией MIT. Эта лицензия разрешает и предназначена для того, чтобы позволить людям полностью использовать код для других проектов с открытым исходным кодом или для проприетарного программного обеспечения. Полный текст лицензии приведен ниже.",
       "header": "MIT лицензия (MIT)",
       "copyright": "Copright &copy; 2016 OpenBazaar Developers",
       "paragraphs": {
@@ -367,10 +367,10 @@
       "helperLanguage": "Показать элементы интерфейса в",
       "helperCountry": "Страна, в которой вы в основном проживаете",
       "helperCurrency": "Показывать цены в",
-      "helperTranslations": "Помочь перевести OpenBazaar на %{helperTranslationsLink}",
+      "helperTranslations": "Помочь перевести PhoreMarketplace на %{helperTranslationsLink}",
       "helperTranslationsLink": "Transifex",
       "sectionName": "Главное",
-      "bitcoinUnit": "Bitcoin Unit",
+      "bitcoinUnit": "Phore Unit",
       "bitcoinUnitTypes": {
         "PHR": "PHR",
         "mPHR": "mPHR",
@@ -488,7 +488,7 @@
         "purge": "Очистить общие файлы",
         "purgeHelper": "Удалить закэшированные файлы, расшаренные с другими",
         "purgeBtn": "Удалить файлы",
-        "purgeToolTip": "OpenBazaar делится кэшированным контентом, который вы просматривали с другими пользователями. Если вы просмотрели текст или изображения, которые вы не хотите больше видеть, то эта кнопка удалит их. Это не повлияет на файлы, которые принадлежат вам.",
+        "purgeToolTip": "PhoreMarketplace делится кэшированным контентом, который вы просматривали с другими пользователями. Если вы просмотрели текст или изображения, которые вы не хотите больше видеть, то эта кнопка удалит их. Это не повлияет на файлы, которые принадлежат вам.",
         "purgeError": "Произошла ошибка, ваши закэшированные файлы, вероятно, не были удалены.",
         "purgeComplete": "Ваши закэшированные файлы были удалены.",
         "blockData": "Блокировать данные ",
@@ -555,7 +555,7 @@
       "languages": "Языки",
       "languagesHelper": "Укажите все языки, на которых Вы можете свободно изъясняться.",
       "acceptGuidelines": "Я прочитал(а) рекомендованное %{acceptGuidelinesLink}",
-      "acceptGuidelinesLink": "OpenBazaar Руководство по разрешению споров",
+      "acceptGuidelinesLink": "PhoreMarketplace Руководство по разрешению споров",
       "understandRequirements": "Я понимаю, что необходимо предоставлять услуги по разрешению споров, любому, кто их запрашивает, если они не нарушают описанные выше условия.",
       "status":{
         "saving": "Сохранение настроек модерации...",
@@ -750,7 +750,7 @@
     "transactionsLabel": "Операции",
     "receiveMoney": {
       "title": "Принять деньги",
-      "needBitcoin": "Нужны Биткоины?",
+      "needBitcoin": "Нужны Phore?",
       "btnCancel": "Отмена"
     },
     "sendMoney": {
@@ -1104,7 +1104,7 @@
     "introScreen": {
       "connectionLbl": "Подключение:",
       "btnChange": "Изменить",
-      "introLine": "A free marketplace. No fees. No restrictions. Earn Bitcoin.",
+      "introLine": "A free marketplace. No fees. No restrictions. Earn Phore.",
       "tagLine": "Buy and Sell Freely",
       "btnGetStarted": "Get Started"
     },
@@ -1122,7 +1122,7 @@
     },
     "tosScreen": {
       "heading": "Условия предоставления услуг",
-      "tos": "OpenBazaar is a network for trading goods and services directly between people - using Bitcoin - without any central organization controlling the platform. This means you are responsible for your own activity on the network.\n\nOpenBazaar users are not anonymous by default. Most communications between parties are encrypted, but IP addresses are public and can be associated with activity on the network. Malicious parties could use this information against you; protecting your privacy is your own responsibility.\n\nOpenBazaar users must adhere to the laws in their own legal jurisdiction as well as their conscience. The OpenBazaar developers do not condone - and are not responsible for - any use of the platform for illegal activity.\n\nThe OpenBazaar community of developers has worked hard to deliver a free platform for trade to the world. But as with any software, bugs will be found. The developers are not responsible for any monetary loss associated with problems in the software.\n\nBy using OpenBazaar you're responsible for your own actions on the OpenBazaar network."
+      "tos": "PhoreMarketplace is a network for trading goods and services directly between people - using Phore - without any central organization controlling the platform. This means you are responsible for your own activity on the network.\n\nPhoreMarketplace users are not anonymous by default. Most communications between parties are encrypted, but IP addresses are public and can be associated with activity on the network. Malicious parties could use this information against you; protecting your privacy is your own responsibility.\n\nPhoreMarketplace users must adhere to the laws in their own legal jurisdiction as well as their conscience. The PhoreMarketplace developers do not condone - and are not responsible for - any use of the platform for illegal activity.\n\nThe PhoreMarketplace community of developers has worked hard to deliver a free platform for trade to the world. But as with any software, bugs will be found. The developers are not responsible for any monetary loss associated with problems in the software.\n\nBy using PhoreMarketplace you're responsible for your own actions on the PhoreMarketplace network."
     }
   },
   "pageControls": {
@@ -1184,8 +1184,8 @@
       "to": "Адрес: %{address}",
       "payFromWallet": "Оплата из кошелька",
       "payWithAlt": "Оплата альткойнами",
-      "note1": "Если Вам нужна помощь, чтобы начать работу с Bitcoin, пожалуйста, прочитайте %{link}.",
-      "note1Link": "Need Bitcoin? on OpenBazaar.org",
+      "note1": "Если Вам нужна помощь, чтобы начать работу с Phore, пожалуйста, прочитайте %{link}.",
+      "note1Link": "Need Phore? on Phore.io",
       "note2": "Ваш платеж будет надежно храниться в эскроу. Если возникнут какие-либо вопросы, Вы можете открыть спор.",
       "note3": "*Плата за услуги модератора взимается только в случае возникновения спора.",
       "note4": "Once you have paid, it may take a bit for the interface to update.",
@@ -1193,7 +1193,7 @@
       "altcoinLink": "You can still fund your PM wallet with altcoins.",
       "walletNote": "<b>External wallets</b> that don't support Segregated Witness may not be able to pay for transactions.",
       "walletLink": "You can send funds to your PM wallet instead.",
-      "feeNote": "<b>Remember to cover any fees</b> when you send funds to your OpenBazaar wallet."
+      "feeNote": "<b>Remember to cover any fees</b> when you send funds to your PhoreMarketplace wallet."
     },
     "completeSection": {
       "paymentSent": "Платёж отправлен!",
@@ -1208,8 +1208,8 @@
       "send": "Отправить",
       "share": {
         "title": "Поделитесь с друзьями",
-        "body": "I just made a purchase on OpenBazaar, the free marketplace without fees or restrictions. Learn more at %{link}.",
-        "shareMsg": "I just made a purchase on @OpenBazaar, the free marketplace without fees or restrictions.",
+        "body": "I just made a purchase on PhoreMarketplace, the free marketplace without fees or restrictions. Learn more at %{link}.",
+        "shareMsg": "I just made a purchase on PhoreMarketplace @PhoreCrypto, the free marketplace without fees or restrictions.",
         "postToTwitter": "Опубликовать в Twitter",
         "postToFacebook": "Опубликовать в Facebook",
         "postToPinterest": "Опубликовать в Pinterest",
@@ -1375,7 +1375,7 @@
         "veryManyConfirmationsCount": "%{countText} подтверждений",
         "rejectConfirm": {
           "title": "Вы уверены?",
-          "body": "Первоначальная сумма в bitcoin будет возвращена покупателю.",
+          "body": "Первоначальная сумма в phore будет возвращена покупателю.",
           "btnCancel": "Отмена",
           "btnConfirm": "Да, отклонить"
         },
@@ -1399,7 +1399,7 @@
         "fulfillBtn": "Fulfill Order",
         "refundConfirm": {
           "title": "Вы уверены?",
-          "body": "Первоначальная сумма в bitcoin будет возвращена покупателю.",
+          "body": "Первоначальная сумма в phore будет возвращена покупателю.",
           "btnCancel": "Отмена",
           "btnConfirm": "Да, вернуть"
         }
@@ -1673,7 +1673,7 @@
   },
   "spendModelErrors": {
     "provideAddress": "Пожалуйста укажите адрес.",
-    "invalidAddress": "Предоставленный адрес не является действительным bitcoin адресом.",
+    "invalidAddress": "Предоставленный адрес не является действительным phore адресом.",
     "provideAmountNumber": "Please provide an amount as a number. If including a decimal, a period should be used as the seperator, for example \"0.00\".",
     "amountGreaterThanZero": "Сумма должна быть больше нуля.",
     "insufficientFunds": "У вас недостаточно средств для отправки такой суммы. Обязательно учтите плату за транзакцию."
